gazin_application.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: api-rest-ovh-iot
# spec:
#   selector:
#     matchLabels:
#       app: nginx
#   replicas: 2
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#       - name: nginx
#         image: nginx:1.16.1
#         env:
#         - name: TOKEN_ID
#           value: "foo"
#         - name: TOKEN_KEY
#           value: "bar"        
#         resources:
#             limits:
#               cpu: 200m
#               memory: 256Mi
#             requests:
#               cpu: 100m
#               memory: 200Mi 
#         ports:
#         - containerPort: 81

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: nginx
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: nginxsecret
      - name: configmap-volume
        configMap:
          name: nginxconfigmap
      containers:
      - name: nginxhttps
        image: bprashanth/nginxhttps:1.0
        ports:
        - containerPort: 443
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: secret-volume
        - mountPath: /etc/nginx/conf.d
          name: configmap-volume


####### teste pipeline ############
