gazin_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx   
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "host do LoadBalancer"  
      http:   
        paths:   
          - path: /   
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
